# glory-trees

./: .editorconfig  .env.example  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  .~lock.report.csv#  Makefile  README.md  bandit-config.yml  index.html  package.json  pyproject.toml  quasar.config.js  report.csv  report.json  tsconfig.json
.github/workflows/: github-actions.yml  main.yml
deploy/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
server/apps/api/heroes/: __init__.py  admin.py  apps.py  urls.py
server/apps/api/heroes/forms/: __init__.py  application.py
server/apps/api/heroes/migrations/: 0001_initial.py  0002_application_archive.py
server/apps/api/heroes/models/: __init__.py  applications.py  archive.py  heroes.py
server/apps/api/heroes/v1/: routers.py  serializers.py  views.py
server/apps/core/api/v1/: urls.py
server/apps/core/utils/management/commands/: ghenv.py  initconfig.py
server/config/: urls.py
server/config/settings/base/: apps.py
server/config/settings/components/: rest_framework.py  sentry.py
server/templates/: 400.html  403.html  403_csrf.html  404.html  500.html  base.html
server/templates/admin/: application_change_form.html
src/boot/: axios.ts
src/components/: AboutApp.vue  AppExample.vue  AppPreloader.vue  ApplicationForm.vue  BannerApp.vue  CarouselApp.vue  HeroCard.vue  HeroMap.vue  MateCard.vue  QuizApp.vue  SoldierApp.vue  TeamApp.vue  TestMap.vue  TreesMap.vue
src/composables/: useExample.ts  useHero.ts
src/constant/: event.ts
src/css/abstracts/: _mixins.scss
src/css/base/: _base.scss  _fonts.scss
src/css/components/: _about.scss  _application-form.scss  _banner.scss  _carousel.scss  _hero-card.scss  _hero-map.scss  _index.scss  _map.scss  _mate-card.scss  _preloader.scss  _quiz.scss  _soldier.scss  _team.scss  _test-map.scss
src/css/layout/: _footer.scss
src/layouts/: FooterLayout.vue  MainLayout.vue
src/models/: example.ts  hero.ts
src/pages/: IndexPage.vue
src/stores/: example-store.ts
